--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     ]
   },
   "dependencies": {
+    "cors": "^2.7.1",
     "immutable": "^3.7.6",
     "redux": "^3.0.5",
     "socket.io": "^1.4.4"
